# ESP32C2_COMPONENTS

com_display/: CMakeLists.txt  Kconfig  com_display.c  com_display.h
com_display/FONTS/: font.h
com_display/SSD1306/: ssd1306.c  ssd1306.h
com_display/ST7735S/: st7735s.c  st7735s.h
com_display/ST7789/: st7789.c  st7789.h
